[FIX] col-left and right width and added wrap to ul

--- a/css/style.css
+++ b/css/style.css
@@ -202,18 +202,19 @@ header{
 
 .categorie ul{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 35px;
 }
 
-.green-underline{
+/* .green-underline{
     width: 40%;
     height: 3px;
     border-radius: 10px;
     background-color: greenyellow;
     position: relative;
     left: 30px;
-}
+} */
 
 /* card */
 .card{
@@ -259,7 +260,7 @@ footer{
 
 /* col left */
 .col-left{
-    width: 25%;
+    width: 250px;
     padding: 25px 0px 25px 15px;
     display: flex;
     align-items: center;
@@ -284,7 +285,7 @@ footer{
 
 /* col mid */
 .col-mid{
-    width: 50%;
+    width: 60%;
     text-align: center;
 }
 
@@ -334,7 +335,7 @@ footer{
 
 /* col25 right */
 .col-right{
-    width: 25%;
+    width: 250px;
     padding: 25px 15px 25px 0px;
     display: flex;
     justify-content: end;
